Changed Pacakge Name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "implementationDSA.js",
+  "name": "advanceDSA.js",
   "version": "1.0.0",
   "description": " An npm packge which gives the code for the implementation of different Advanced Data Structures.",
   "main": "index.js",
