--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "algosandds.js",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": " An npm packge which gives the code for the implementation of different Advanced Data Structures.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository" : {
-    type : "git",
-    url 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Suiiinaldo/Node-Package-for-DSA"
   },
   "author": "Prakhar Pratap Singh",
   "license": "ISC"
